Remove useless gradle plugins